--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -23,7 +23,7 @@ EXTRA_DIST = gethostname.c strdup.c strerror.c memmove.c memset.c
 lib_LTLIBRARIES = libgsasl.la
 
 INCLUDES = -I../intl @LIBNTLM_CFLAGS@ @LIBGCRYPT_CFLAGS@ @GSSAPI_CFLAGS@ \
-	@LIBSTRINGPREP_CFLAGS@
+	@LIBIDN_CFLAGS@
 
 include_HEADERS = gsasl.h
 
@@ -43,7 +43,7 @@ libgsasl_la_SOURCES = init.c done.c error.c version.c callback.c \
 			securid.h securid.c
 
 libgsasl_la_LIBADD = @LTLIBINTL@ @LIBGCRYPT_LIBS@ @LIBNTLM_LIBS@ \
-	@GSSAPI_LIBS@ @LIBSTRINGPREP_LIBS@ -lm @LTLIBOBJS@
+	@GSSAPI_LIBS@ @LIBIDN_LIBS@ -lm @LTLIBOBJS@
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 
 localedir = $(datadir)/locale
