Distcheck doesn't work with GTK-DOC.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,7 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-DISTCHECK_CONFIGURE_FLAGS = --without-included-gettext
+DISTCHECK_CONFIGURE_FLAGS = --without-included-gettext --disable-gtk-doc
 
 EXTRA_DIST = ANNOUNCE config.h.in config.rpath mkinstalldirs libgsasl.pc.in
 
