Add unfinished KERBEROS_V5.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# Copyright (C) 2002 Simon Josefsson.
+# Copyright (C) 2002, 2003 Simon Josefsson.
 #
 # This file is part of GNU SASL.
 #
@@ -23,7 +23,7 @@ EXTRA_DIST = gethostname.c strdup.c strerror.c memmove.c memset.c
 lib_LTLIBRARIES = libgsasl.la
 
 INCLUDES = -I../intl @LIBNTLM_CFLAGS@ @LIBGCRYPT_CFLAGS@ @GSSAPI_CFLAGS@ \
-	@LIBIDN_CFLAGS@
+	@SHISHI_CFLAGS@ @LIBIDN_CFLAGS@
 
 include_HEADERS = gsasl.h
 
@@ -40,10 +40,11 @@ libgsasl_la_SOURCES = init.c done.c error.c version.c callback.c \
 			digest-md5.h digest-md5.c \
 			x-ntlm.h ntlm.c \
 			x-gssapi.h gssapi.c \
-			securid.h securid.c
+			securid.h securid.c \
+			kerberos_v5.h kerberos_v5.c
 
 libgsasl_la_LIBADD = @LTLIBINTL@ @LIBGCRYPT_LIBS@ @LIBNTLM_LIBS@ \
-	@GSSAPI_LIBS@ @LIBIDN_LIBS@ -lm @LTLIBOBJS@
+	@GSSAPI_LIBS@ @SHISHI_LIBS@ @LIBIDN_LIBS@ -lm @LTLIBOBJS@
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 
 localedir = $(datadir)/locale
