--- a/lib/gsasl.h.in
+++ b/lib/gsasl.h.in
@@ -83,6 +83,7 @@ enum {
   GSASL_NEED_SERVER_SECURID_CALLBACK,
   GSASL_NEED_SERVER_SERVICE_CALLBACK,
   GSASL_NEED_SERVER_GSSAPI_CALLBACK,
+  GSASL_NEED_SERVER_RETRIEVE_CALLBACK,
   GSASL_SECURID_SERVER_NEED_ADDITIONAL_PASSCODE,
   GSASL_SECURID_SERVER_NEED_NEW_PIN,
   GSASL_UNICODE_NORMALIZATION_ERROR,
