--- a/lib/gsasl.h.in
+++ b/lib/gsasl.h.in
@@ -214,6 +214,9 @@ typedef Gsasl_qop (*Gsasl_client_callback_qop) (Gsasl_session_ctx *sctx,
 						Gsasl_qop serverqops);
 typedef int (*Gsasl_client_callback_maxbuf) (Gsasl_session_ctx *sctx,
 					     int servermaxbuf);
+typedef int (*Gsasl_client_callback_realm) (Gsasl_session_ctx *sctx,
+					    char *out,
+					    size_t *outlen);
 typedef int (*Gsasl_server_callback_retrieve) (Gsasl_session_ctx *sctx,
 					       const char *authentication_id,
 					       const char *authorization_id,
