Generate FSF style ChangeLog.

--- a/Makefile.am
+++ b/Makefile.am
@@ -34,8 +34,8 @@ ACLOCAL_AMFLAGS = -I m4 -I argp
 .PHONY: ChangeLog
 ChangeLog:
 	test ! -f .cvsusers || \
-	cvs2cl --fsf --usermap .cvsusers --separate-header -I \
-    "ChangeLog|.cvsignore|.cvsusers|autogen.sh|doc/specification|libstringprep"
+	cvs2cl --fsf --usermap .cvsusers --no-times --no-common-dir --prune \
+	-I "ChangeLog|.cvs|autogen.sh|doc/specification|libstringprep"
 
 indent:
 	(cd lib && make indent)
