--- a/configure.ac
+++ b/configure.ac
@@ -20,15 +20,15 @@ dnl Process this file with autoconf to produce a configure script.
 # Boston, MA 02111-1307, USA.
 
 AC_PREREQ(2.50)
-AC_INIT(gsasl, 0.0.5, bug-gsasl@gnu.org)
+AC_INIT(libgsasl, 0.0.5, bug-gsasl@gnu.org)
 
 # Interfaces removed:       CURRENT++ AGE=0 REVISION=0
 # Interfaces added:         CURRENT++ AGE++ REVISION=0
 # Interfaces changed:       CURRENT++       REVISION=0
 # No interfaces changed:                    REVISION++
-LT_CURRENT=2
-LT_AGE=1
-LT_REVISION=2
+LT_CURRENT=3
+LT_AGE=2
+LT_REVISION=0
 AC_SUBST(LT_CURRENT)
 AC_SUBST(LT_AGE)
 AC_SUBST(LT_REVISION)
