Fix pkg-config filename. Fix release target.

--- a/Makefile.am
+++ b/Makefile.am
@@ -59,8 +59,8 @@ release:
 	gpg --verify $(distdir).tar.gz.asc
 	scp $(distdir).tar.gz* gnudist.gnu.org:~alpha/gnu/$(PACKAGE)/
 	test -d $(htmldir) && cp -v $(PACKAGE).{ps,pdf,html} $(htmldir)/
-	test -d $(htmldir)/doc/reference && \
-		cp -v doc/reference/*.html $(htmldir)/reference/
+	test -d $(htmldir)/reference && \
+		cp -v doc/reference/html/*.html $(htmldir)/reference/
 	test -d $(htmldir) && cd $(htmldir) && cvs commit -m "Update." \
 		$(PACKAGE).{ps,pdf,html} reference/*.html
 	cvs rtag $(tag) $(PACKAGE)
