Fix release target.

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,8 +44,9 @@ indent:
 	(cd src && make indent)
 	(cd tests && make indent)
 
-htmldir = ../www-$(PACKAGE)
 tag = $(PACKAGE)-`echo $(VERSION) | sed 's/\./-/g'`
+shortname = gsasl
+htmldir = ../www-$(shortname)
 
 release:
 	cvs upd -p -r HEAD NEWS > /dev/null
@@ -57,10 +58,10 @@ release:
 	rm -f $(distdir).tar.gz.asc
 	gpg -a --sign --detach $(distdir).tar.gz
 	gpg --verify $(distdir).tar.gz.asc
-	scp $(distdir).tar.gz* gnudist.gnu.org:~alpha/gnu/$(PACKAGE)/
-	test -d $(htmldir) && cp -v $(PACKAGE).{ps,pdf,html} $(htmldir)/
+	scp $(distdir).tar.gz* gnudist.gnu.org:~alpha/gnu/$(shortname)/
+	test -d $(htmldir) && cp -v doc/$(shortname).{ps,pdf,html} $(htmldir)/
 	test -d $(htmldir)/reference && \
 		cp -v doc/reference/html/*.html $(htmldir)/reference/
 	test -d $(htmldir) && cd $(htmldir) && cvs commit -m "Update." \
-		$(PACKAGE).{ps,pdf,html} reference/*.html
-	cvs rtag $(tag) $(PACKAGE)
+		$(shortname).{ps,pdf,html} reference/*.html
+	cvs rtag $(tag) $(shortname)
