--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -95,7 +95,7 @@ gsasl-api-error-labels.texi: $(gsasl_api_error_label_deps)
 gsasl.1: $(top_srcdir)/src/gsasl.c $(top_builddir)/src/gsasl
 	$(HELP2MAN) \
 		--name="SASL library command line interface" \
-		--output=$@ $(top_builddir)/src/gsasl
+		$(top_builddir)/src/gsasl | sed 's/lt-gsasl/gsasl/g' > $@
 
 gsasl.html: gsasl.texi
 	$(MAKEINFO) --html --no-split --number-sections $<
