Warn if GSS isn't found.

--- a/configure.ac
+++ b/configure.ac
@@ -173,6 +173,7 @@ if test "$gssapi" != "no" ; then
 		AC_DEFINE(USE_GSS, 1, [Define to 1 if you want GSS.])
 		gssapi=yes
 	else
+		AC_MSG_WARN([GSS not found (see http://josefsson.org/gss/)...])
 		AC_PATH_PROG(KRB5_CONFIG, krb5-config, no)
 		if test "$KRB5_CONFIG" != "no" ; then
 			GSSAPI_CFLAGS=`$KRB5_CONFIG --cflags`
