--- a/Makefile.am
+++ b/Makefile.am
@@ -23,13 +23,13 @@ EXTRA_DIST = ANNOUNCE config.h.in config.rpath mkinstalldirs libgsasl.pc.in
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libgsasl.pc
 
-MOST_SUBDIRS = m4 po argp lib src tests doc
+MOST_SUBDIRS = m4 po gl lib src tests doc
 
 DIST_SUBDIRS = libstringprep $(MOST_SUBDIRS)
 
 SUBDIRS = @LIBIDN@ $(MOST_SUBDIRS)
 
-ACLOCAL_AMFLAGS = -I m4 -I argp
+ACLOCAL_AMFLAGS = -I m4 -I gl/m4
 
 # Maintainer targets
 
